--- a/styles.css
+++ b/styles.css
@@ -61,3 +61,11 @@ h1 {
     font-weight: bold;
     color: black;
 }
+
+.mapa {
+    background-color: #fafafa;
+    margin: 1rem;
+    padding: 1rem;
+    border: 2px solid #ccc;
+    text-align: center;
+}
