--- a/styles.css
+++ b/styles.css
@@ -43,16 +43,17 @@ h1 {
 .vermas {
     margin-right: 3em;
     font-size: 150%;
+    font-family: 'Courier New', Courier, monospace;
     color: white;
 }
 
 .Form-contacto{
     width: 600px;
-    background: #24303c;
+    background: black;
     padding: 30px;
     margin: auto;
     margin-top: 50px;
-    font-family: 'calibri';
+    font-family: 'Courier New', Courier, monospace;
     color: white;
 }
 
@@ -63,7 +64,7 @@ h1 {
     border-radius: 4px;
     margin-bottom: 16px;
     border: 1px solid #1f53c5;
-    font-family: 'calibri';
+    font-family: 'Courier New', Courier, monospace;
     font-size: 18px;
 }
 
