--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,7 @@ h1 {
 
 .vermas {
     margin-right: 3em;
-    font-size: 150%;
+    font-size: 80%;
     font-family: 'Courier New', Courier, monospace;
     color: white;
 }
@@ -76,4 +76,11 @@ h1 {
     color: white;
     margin: 16px 0;
     font-size: 16px;
+}
+
+.contactos {
+    margin-right: 3em;
+    font-size: 110%;
+    font-family: 'Courier New', Courier, monospace;
+    color: white;
 }
