--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ p {
     margin-left: 15%;
     margin-right: 15%;
     margin-bottom: 0;
-    text-align: center;
+    text-align: justify;
     font-family: 'Courier New', Courier, monospace;
 }
   
@@ -23,9 +23,22 @@ h1 {
     color: black;
 }
 
+h3 {
+    text-align: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: bold;
+    font-size: 150%;
+}
+
 .Form-contacto h4 {
     font-size: 22px;
     margin-bottom: 20px;
+}
+
+.parrafo{
+    text-align: justify;
+    padding: 10px;  
+    font-family: 'Courier New', Courier, monospace; 
 }
 
 .mapa {
@@ -83,4 +96,17 @@ h1 {
     font-size: 110%;
     font-family: 'Courier New', Courier, monospace;
     color: white;
+}
+
+.gallery-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    padding: 3em;
+    grid-gap: 1em;
+}
+
+.gallery__img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
