--- a/styles.css
+++ b/styles.css
@@ -7,8 +7,8 @@ p {
     margin-left: 15%;
     margin-right: 15%;
     margin-bottom: 0;
-    text-align: justify;
-    font-family: 'Courier New', Courier, monospace;
+    text-align: center;
+    font-family: Helvetica;
 }
   
 nav ul li:hover {
@@ -17,7 +17,7 @@ nav ul li:hover {
 
 h1 {
     text-align: center;
-    font-family: 'Gill Sans', 'Gill Sans MT', 'Trebuchet MS', sans-serif;
+    font-family: Helvetica;
     font-size: 400%;
     font-weight: bolder;
     color: black;
@@ -25,7 +25,7 @@ h1 {
 
 h3 {
     text-align: center;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: Helvetica;
     font-weight: bold;
     font-size: 150%;
 }
@@ -38,7 +38,7 @@ h3 {
 .parrafo{
     text-align: justify;
     padding: 10px;  
-    font-family: 'Courier New', Courier, monospace; 
+    font-family: Helvetica; 
 }
 
 .mapa {
@@ -63,7 +63,7 @@ h3 {
 .vermas {
     margin-right: 3em;
     font-size: 80%;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: Helvetica;
     color: white;
 }
 
@@ -73,7 +73,7 @@ h3 {
     padding: 30px;
     margin: auto;
     margin-top: 50px;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: Helvetica;
     color: white;
 }
 
@@ -84,7 +84,7 @@ h3 {
     border-radius: 4px;
     margin-bottom: 16px;
     border: 1px solid #1f53c5;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: Helvetica;
     font-size: 18px;
 }
 
@@ -101,7 +101,7 @@ h3 {
 .contactos {
     margin-right: 3em;
     font-size: 110%;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: Helvetica;
     color: white;
 }
 
@@ -120,4 +120,11 @@ h3 {
 
 .gallery__item:nth-child(3){
     grid-column-start: span 2;
+}
+
+.serv-container {
+    margin: 2em;
+    border: 1em;
+    border-color: white;
+    padding: 0em;
 }
