--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ p {
     margin-left: 15%;
     margin-right: 15%;
     margin-bottom: 0;
-    text-align: center;
+    text-align: justify;
     font-family: Helvetica;
 }
   
@@ -127,4 +127,41 @@ h3 {
     border: 1em;
     border-color: white;
     padding: 0em;
+}
+
+.read-more-state {
+    display: none;
+}
+  
+.read-more-target {
+    opacity: 0;
+    max-height: 0;
+    font-size: 0;
+    transition: .25s ease;
+}
+  
+.read-more-state:checked~.read-more-wrap .read-more-target {
+    opacity: 1;
+    font-size: inherit;
+    max-height: 999em;
+    text-align: justify;
+}
+  
+.read-more-state~.read-more-trigger:before {
+    content: 'Ver más';
+}
+  
+.read-more-state:checked~.read-more-trigger:before {
+    content: 'Ver menos';
+}
+  
+.read-more-trigger {
+    cursor: pointer;
+    display: inline-block;
+    padding: 0 .5em;
+    color: #666;
+    font-size: .9em;
+    line-height: 2;
+    border: 1px solid #ddd;
+    border-radius: .25em;
 }
